--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   "scripts": {
     "build": "babel src --out-dir dist",
     "bundle": "rollup -c",
-    "test": "testem ci"
+    "test": "testem ci",
+    "lint:js": "eslint ./src ./test"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "prettier": "^1.13.7",
     "rollup": "^0.65.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.6",
